--- a/index.Rmd
+++ b/index.Rmd
@@ -220,45 +220,68 @@ df <-
 penguins
 ```
 
-## 行（select）
+## 行（filter）
 
-### 変数をひとつ選択する
+* ケースを絞りたいとき
+
+* "## パッケージを読み込み"を実行してから
+
+
+## 列
+
+* [R for Data Science（2e）](https://r4ds.hadley.nz/)を参照して作成
+
+### 変数を選択する（select）
+
+* "## パッケージを読み込み"を実行してから
+
+* `matches()`を用いた正規表現の詳細は別の章
+
+#### 選択するシリーズ
+
+##### 変数をひとつ選択する
 
 ```{r}
+# "species"を選択する
 penguins |> 
   select(species)
 ```
 
-### 変数を個別に複数選択する
+##### 変数を個別に複数選択する
 
 ```{r}
+# "species"，"island"，"year"を選択する
 penguins |> 
   select(species, island, year)
 ```
 
-### 変数を連続で複数選択する
+##### 変数を連続で複数選択する
 
 ```{r}
+# "species"から"bill_length_mm"を選択する
 penguins |> 
   select(species:bill_length_mm)
 ```
 
-### 変数をまとめて複数選択する
+##### 変数をまとめて複数選択する
 
 ```{r}
+# "species"，"year"をまとめて選択する
+
+# "species"，"year"を含むオブジェクトを作成
 obs <- 
   c("species", "year")
 
+# all_of
 penguins |> 
   select(all_of(obs))
-```
 
-```{r}
+# any_of
 penguins |> 
   select(any_of(obs))
 ```
 
-### all_ofとany_ofの違い
+##### （参考）all_ofとany_ofの違い
 
 ```{r eval=FALSE}
 # ペンギンデータに含まれていない"weight"が入ったobsを作成
@@ -274,23 +297,188 @@ penguins |>
   select(any_of(obs))
 ```
 
-### 変数を選択しない
+##### 特定の文字で始まる変数を選択する
 
 ```{r}
+# "bill"で始まる変数を選択する
+
+# starts_with
+penguins |> 
+  select(starts_with("bill"))
+
+# matches
+penguins |> 
+  select(matches("^bill"))
+```
+
+##### 特定の文字で終わる変数を選択する
+
+```{r}
+# "mm"で終わる変数を選択する
+
+# ends_with
+penguins |> 
+  select(ends_with("mm"))
+
+# matches
+penguins |> 
+  select(matches("mm$"))
+```
+
+##### 特定の文字を含む変数を選択する
+
+```{r}
+# "length"を含む変数を選択する
+
+# contains
+penguins |> 
+  select(contains("length"))
+
+# matches
+penguins |> 
+  select(matches("length"))
+```
+
+##### 番号のついた変数を選択する
+
+```{r}
+# x1～x6の変数を追加したオブジェクトを作成
+df <- 
+  tribble(
+    ~x1, ~x2, ~x3, ~x4, ~x5, ~x6,
+      1,   2,   3,   4,   5,   6,
+      7,   8,   9,  10,  11,  12,
+     13,  14,  15,  16,  17,  18)
+
+df
+
+# x1～x3の変数を選択する
+
+# num_range
+df |> 
+  select(num_range("x", 1:3))
+
+# matches
+df |> 
+  select(matches("x[1-3]"))
+```
+
+
+#### 選択しないシリーズ
+
+##### 変数を選択しない
+
+```{r}
+# "species"を選択しない
 penguins |> 
   select(!species)
 ```
 
-### 変数を個別に複数選択しない
+##### 変数を個別に複数選択しない
 
 ```{r}
+# "species"，"island"，"year"を選択しない
 penguins |> 
-  select(!c(species, island))
+  select(!c(species, island, year))
 ```
 
+##### 変数を連続で複数選択しない
 
+```{r}
+# "species"から"bill_length_mm"を選択しない
+penguins |> 
+  select(!species:bill_length_mm)
+```
 
+##### 変数をまとめて複数選択しない
 
+```{r}
+# "species"，"year"をまとめて選択しない
+
+# "species"，"year"を含むオブジェクトを作成
+obs <- 
+  c("species", "year")
+
+# all_of
+penguins |> 
+  select(!all_of(obs))
+
+# any_of
+penguins |> 
+  select(!any_of(obs))
+```
+
+##### 特定の文字で始まる変数を選択しない
+
+```{r}
+# "bill"で始まる変数を選択しない
+
+# starts_with
+penguins |> 
+  select(!starts_with("bill"))
+
+# matches
+penguins |> 
+  select(!matches("^bill"))
+```
+
+##### 特定の文字で終わる変数を選択しない
+
+```{r}
+# "mm"で終わる変数を選択しない
+
+# ends_with
+penguins |> 
+  select(!ends_with("mm"))
+
+# matches
+penguins |> 
+  select(!matches("mm$"))
+```
+
+##### 特定の文字を含む変数を選択しない
+
+```{r}
+# "length"を含む変数を選択しない
+
+# contains
+penguins |> 
+  select(!contains("length"))
+
+# matches
+penguins |> 
+  select(!matches("length"))
+```
+
+##### 番号のついた変数を選択しない
+
+```{r}
+# x1～x6の変数を追加したオブジェクトを作成
+df <- 
+  tribble(
+    ~x1, ~x2, ~x3, ~x4, ~x5, ~x6,
+      1,   2,   3,   4,   5,   6,
+      7,   8,   9,  10,  11,  12,
+     13,  14,  15,  16,  17,  18)
+
+df
+
+# x1～x3の変数を選択しない
+
+# num_range
+df |> 
+  select(!num_range("x", 1:3))
+
+# matches
+df |> 
+  select(!matches("x[1-3]"))
+```
+
+##### オブジェクトの削除
+
+```{r}
+rm(df)
+```
 
 # ショートカット
 
